--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-lineto": "^3.3.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-switch": "^6.0.0",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
